2006-10-30  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java:  Fix problem with accessField callback
	processing files other than the intended source file.

2006-10-27  Mike Cvet  <mcvet@redhat.com>

	* DOMFactory.java (createDOM): Remove the Task parameter and instead
	take a StackFrame. Get the local DwflLine from the StackFrame. Fixes
	#212434.

2006-10-25  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java: Fix the include path.

2006-10-25  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java: Add method getIncPaths to get the
	include paths from the ELF header.
	Add new parameter to pass executable path.
	* cparser/CTagsParser.java: Add new parameter to pass executable
	path.
	* cparser/SimpleParser.java: Ditto.
	* DOMFactory.java: Ditto.
	* StaticParser.java: Ditto.

2006-10-24  Rick Moseley  <rmoseley@redhat.com>

	* DOMImage.java:  Fix bz's 3417, 3418.

2006-10-24  Andrew Cagney  <cagney@redhat.com>

	* TestDOM.java: Import frysk.junit.TestCase.
	(testDOMImage, testDOMsource, testDOMLine)
	(testDOMInlineInstance): Mark as broken; 3417.
	(testDOMFrysk): Mark as broken; 3418.

2006-10-23  Rick Moseley  <rmoseley@redhat.com>

	* DOMFactory.java: Add new printDOM method.
	* DOMFrysk.java: Return the root JDOM Element.
	* DOMImage.java: Accept the root JDOM Element.
	Add the image to the root JDOM Element.

2006-10-20  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java: Add "debug" boolean to print DOM if wanted.
	Fix indexing when variable definitions are found.
	* cparser/CTagsParser.java: Pass DOMFrysk as a parameter.
	* cparser/SimpleParser.java: Ditto.
	* StaticParser.java: Ditto.
	* DOMFactory.java: Ditto.
	Add ability to print the DOM for debugging.

2006-10-18  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java: Add CodeREader so #include files get 
	processed properly.
	Fix acceptMacro so it only processes macros from the source file.